--- a/index.html
+++ b/index.html
@@ -41,4 +41,5 @@
     </nav>
   </body>
   <script type="module" src="./index.js"></script>
+  <script type="module" src="./components/SearchBar/SearchBar.js"></script>
 </html>
